Ghostery Logo Added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -346,10 +346,11 @@
     <color name="device_foreground">#20123A</color>
 
     <!-- Launcher Icon colors -->
-    <color name="default_launcher_background">#FDFDFD</color>
+    <color name="default_launcher_background">#00AEF0</color>
     <color name="nightly_launcher_background">#220033</color>
     <color name="debug_launcher_background">#312A65</color>
     <color name="ic_launcher_background">@color/default_launcher_background</color>
+    <color name="ic_launcher_private_background">@color/default_launcher_background</color>
 
     <!-- Button Colors -->
     <color name="grey_button_color">#E0E0E6</color>
