--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,27 +1,15 @@
-<!-- This Source Code Form is subject to the terms of the Mozilla Public
-   - License, v. 2.0. If a copy of the MPL was not distributed with this
-   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="9.283626"
+    android:viewportHeight="9.283627">
+  <group android:translateX="1.9959794"
+      android:translateY="1.9959797">
     <path
-        android:pathData="M78 44.4c-1.2-2.7-3.8-6-5.7-6.8-0.5-0.2-1.2 00.5-1 1-2.8-3.3-6-6.3-8-10.2l-0.6-1.3c-0.3-0.5-1-0.6-1.7-0a20 20 0 0 0-8.6 13.6c-0.5 0-3.3 0.3-3 1.8 0.7 1.3 1.8 0 3.2 0 4.4-0.3 7 0.7 9.4 3-1.6-0.3-4-0.6-4 0.9 0 0.5 1.3 1 1.8 1.5a9 9 0 0 1 3.5 9.3 9.2 9.2 0 0 1-10 7.6c-8.7-0.5-9.7-8.3-9.7-8.3 1.3-3 5.6-3.6 6.6-3.5 1.4 0 1.8-0.3 2.8-1 2-1.6 2.5-3 1.2-3.5-1-0.5-3-1.4-4.3-2.4-3-2-2.4-2.4-3.6-3-0.3-1.6-0.4-2.3-0.2-4 0-1 0.5-1.8 0-2-0.6-0.5-0.7-0.3-1.2-0-2.3 0.8-4.3 3-5 3.7a17 17 0 0 1-0.4-4c0.2-1.3-0.5-2-1.8-1a22.7 22.7 0 0 0-9.6 19.5 26 26 0 1 0 50-10.5zm-18.8-3c-1.6-0.5-3.3-1-5-1 0.2-2.8 2.6-7.6 4.4-9.2-0.7 2-1.3 7 0.6 10.2zm0.5-5.5c0-3.6 0.7-5 1.5-6.7a29.7 29.7 0 0 0 2.5 3.6c3.7 4.4 8 8 10 13.3 1 2.3-0 8.4-4 12a13 13 0 0 0-1.3-8c-0.8-1-1.5-2.3-2.6-3-2.2-3.5-2.4-2.7-4-4.8a11.2 11.2 0 0 1-2.2-6.6zm1.6 28c5-4 5.4-12 0.7-16.6 7.8 2.6 6.2 12 5.2 13.3-1 1.3-3.8 2.4-6 3.4zm-9.8-13.5c0 1.2-1.8 0.3-5 1.2-3 0.8-4.2 3.3-4.2 3.3 0-0.8 0.2-2.4-0.3-2.8-0.3-0.4-1-0.2-1.7-0.4a5.4 5.4 0 0 1-3.6-2.3c2.8-1.5 5.7-1 8.5 0.4 1.8 1 4.3 0.5 6.3 0.6zm-7.3-11.3s-0.2 1.3 0 2.7c0 0-1.6-0.5-2.7-0.5 1-1 2.7-2.2 2.7-2.2zM30 54.5c-1-5.4 2.4-13 7.6-17 0 2 0 4.3 1.3 5.4 0.3 0.2 1 0 1.8 0 1.4 0 3 0.4 4.2 1.2 1.7 1.2 2.2 2.8 6.5 4.7 0 0-4 0-5.2-0.3-2-0.6-3.3-1.7-7.3-1.5-1.7 0-4.8 1.4-4.5 2.3 0.7 2.6 3.6 4.3 6 4.5-0.8 7 7.3 13.4 14.5 13.2a21 21 0 0 0 20.2-14.3c0.3 4.8-1 10-4 13.6C66 73 58 75.2 49.3 73.7a24 24 0 0 1-19.2-19.2zm48 2.8a24.3 24.3 0 0 1-45.8 7.4c5.4 7.2 12 10.8 20.6 11 11.5 0.6 20.8-6 23.5-16.8 1.5-6-0-11.3-1.6-16.7a22.7 22.7 0 0 1 3.3 15z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:startY="25.09"
-                android:startX="78.92"
-                android:endY="74.45"
-                android:endX="37.26"
-                android:type="linear">
-                <item android:offset="0.09" android:color="#FF980E"/>
-                <item android:offset="0.18" android:color="#FF8B16"/>
-                <item android:offset="0.36" android:color="#FF672A"/>
-                <item android:offset="0.56" android:color="#FF3647"/>
-                <item android:offset="0.94" android:color="#E31587"/>
-            </gradient>
-        </aapt:attr>
-    </path>
+        android:pathData="m4.39319,4.04453c0.22683,0.52146 0.03911,0.45919 -0.12906,0.41638 -0.16817,-0.0428 -0.54361,-0.21014 -0.66094,-0.00389 -0.11733,0.20624 -0.2151,0.38525 -0.48887,0.2685 -0.27376,-0.11674 -0.40282,-0.15566 -0.44193,-0.15566l-0.05312,0c-0.03911,0 -0.16817,0.03891 -0.44193,0.15566 -0.27376,0.11674 -0.37154,-0.06226 -0.48887,-0.2685 -0.11732,-0.20625 -0.49277,-0.03891 -0.66094,0.00389 -0.16817,0.04281 -0.35589,0.10507 -0.12905,-0.41638 0.16875,-0.38794 0.20324,-0.71953 0.20987,-0.86408L1.10836,2.05868C1.10836,1.21395 1.79657,0.52917 2.64553,0.52917 3.49448,0.52917 4.18269,1.21395 4.18269,2.05868l0,1.10576c0.00473,0.13437 0.0349,0.47644 0.21049,0.8801zM2.64553,3.25012c0.36483,0 0.67193,-0.35732 0.76455,-0.75488 -0.17879,0.24464 -0.4547,0.40171 -0.76455,0.40171 -0.30984,0 -0.58576,-0.15707 -0.76454,-0.40171 0.0926,0.39757 0.39971,0.75488 0.76454,0.75488zM3.14122,2.29675c0.19032,0 0.3446,-0.24637 0.3446,-0.55028 0,-0.30392 -0.15428,-0.55029 -0.3446,-0.55029 -0.19032,0 -0.34461,0.24637 -0.34461,0.55029 0,0.30391 0.15429,0.55028 0.34461,0.55028zM2.17061,1.19618c-0.19031,0 -0.34459,0.24637 -0.34459,0.55029 0,0.30391 0.15428,0.55028 0.34459,0.55028 0.19032,0 0.34461,-0.24637 0.34461,-0.55028 0,-0.30392 -0.15429,-0.55029 -0.34461,-0.55029z"
+        android:strokeWidth="1"
+        android:fillColor="#ffffff"
+        android:strokeColor="#00000000"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
