--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -11,6 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="?homeBackground"
     tools:context="org.mozilla.fenix.settings.about.AboutFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +27,7 @@
             android:layout_marginEnd="@dimen/about_header_icon_margin_start_end"
             android:contentDescription="@string/app_name"
             android:importantForAccessibility="no"
-            app:srcCompat="?fenixLogo"
+            app:srcCompat="@drawable/ic_logo_wordmark_normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
