--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,7 +85,9 @@
         <item name="tabTrayHeadingIconInactive">@color/tab_tray_heading_icon_inactive_normal_theme</item>
 
         <!-- Drawables -->
-        <item name="fenixLogo">@drawable/ic_logo_wordmark_normal</item>
+        <!-- Ghostery Begin: white woodmark -->
+        <item name="fenixLogo">@drawable/ic_logo_wordmark_white</item>
+        <!-- Ghostery End -->
         <item name="homeBackground">@color/foundation_normal_theme</item>
         <item name="bottomBarBackground">@drawable/home_bottom_bar_background</item>
         <item name="bottomBarBackgroundTop">@drawable/home_bottom_bar_background_top</item>
@@ -210,7 +212,9 @@
         <item name="tabTrayHeadingIconInactive">@color/tab_tray_heading_icon_inactive_dark_theme</item>
 
         <!-- Drawables -->
-        <item name="fenixLogo">@drawable/ic_logo_wordmark_private</item>
+        <!-- Ghostery Begin: white wordmark -->
+        <item name="fenixLogo">@drawable/ic_logo_wordmark_white</item>
+        <!-- Ghostery End -->
         <item name="homeBackground">@drawable/private_home_background_gradient</item>
         <item name="bottomBarBackground">@drawable/private_home_bottom_bar_background_gradient</item>
         <item name="bottomBarBackgroundTop">@drawable/private_home_bottom_bar_background_gradient_top</item>
