--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -89,10 +89,12 @@
             android:key="@string/pref_key_private_browsing"
             android:title="@string/preferences_private_browsing_options"/>
 
+        <!-- Ghostery Begin: tracking protection is a Ghostery thing -+>
         <androidx.preference.Preference
             android:icon="@drawable/ic_tracking_protection_enabled"
             android:key="@string/pref_key_tracking_protection_settings"
             android:title="@string/preference_enhanced_tracking_protection" />
+        <!- Ghostery End -->
 
         <androidx.preference.Preference
             android:icon="@drawable/ic_permission"
