--- a/app/src/main/res/drawable/ic_status_logo.xml
+++ b/app/src/main/res/drawable/ic_status_logo.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- This Source Code Form is subject to the terms of the Mozilla Public
-   - License, v. 2.0. If a copy of the MPL was not distributed with this
-   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="32"
-        android:viewportHeight="32">
-    <path android:fillColor="@android:color/white"
-          android:pathData="M30 10.4a8.5 8.5 0 0 0-3-3.8c0.7 1.4 1.2 3 1.4 4.6-1.7-4.2-4.5-6-6.9-9.6-0.1-0.2-0.6-1-0.7-1.5a10.9 10.9 0 0 0-5.2 7.5c-1 0-2 0.3-3 0.7-0.2 0.1-0.3 0.3-0.2 0.5 0 0.2 0.2 0.3 0.4 0.3 0.3 0 1.2-0.7 3.2-0.8 4 0 6 2.8 6.6 3.9-1-0.8-2.3-1-3.6-1A6.2 6.2 0 0 1 16.1 23c-4.8 0-6.6-3.5-6.9-5.6-0.2-2.1 0.7-2.6 5-2.6 0.8-0.3 1.4-0.9 1.8-1.6 0-0.2-2.6-1.2-3.6-2.2l-1-1-0.4-0.3A6.8 6.8 0 0 1 11 6c-1.4 0.7-2.7 1.6-3.7 2.8-0.6-0.8-0.5-3.2-0.5-3.8-0.2 0.1-5.7 3.2-5.7 11.2a15 15 0 0 0 15 15c7.4 0 14-6 14.9-13.4 0.2-2.1-0.1-5-1-7.4z"/>
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="5.2916665"
+    android:viewportHeight="5.291667">
+  <path
+      android:pathData="m4.39319,4.04453c0.22683,0.52146 0.21727,0.49737 -0.66217,0.30819 -0.38094,0.38585 -0.17148,0.57769 -1.11174,0.21716 -0.92895,0.3318 -0.55432,0.25641 -1.08578,-0.20037C0.69316,4.54444 0.67164,4.56599 0.89849,4.04453 1.22711,3.30949 1.07421,2.75093 1.10836,2.05868c0.08524,-2.09875 2.98141,-1.99832 3.07434,0 -0.00522,0.68425 -0.05323,1.31879 0.21049,1.98585zM3.41007,2.49524c-0.4438,0.5651 -1.05548,0.56653 -1.52909,0 0.26914,0.95784 1.26878,0.99545 1.52909,0zM3.14122,2.29675c0.51149,-0.11758 0.39446,-1.00901 0,-1.10056 -0.43931,0.04804 -0.46827,1.04849 0,1.10056zM2.17061,1.19618c-0.48309,0.09701 -0.35904,1.05366 0,1.10056 0.50417,-0.06401 0.37927,-1.0755 0,-1.10056z"
+      android:strokeWidth="1"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"
+      android:fillType="evenOdd"/>
 </vector>
