Help resources point to Ghostery domain

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -32,6 +32,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.75" />
 
+        <!-- Ghostery Begin: Ghostery is produced by Ghostery -+>
         <TextView
             android:id="@+id/about_content"
             style="@style/Header16TextStyle"
@@ -46,6 +47,7 @@
             app:layout_constraintTop_toBottomOf="@id/wordmark"
             app:layout_constraintWidth_percent="0.8"
             tools:text="@string/about_content" />
+        -->
 
         <TextView
             android:id="@+id/about_text"
@@ -57,9 +59,10 @@
             android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/about_content"
+            app:layout_constraintTop_toBottomOf="@id/wordmark"
             app:layout_constraintWidth_percent="0.8"
             tools:text="1.0.x (Build #x)\nGV: 69.x-x\nAC: 1.0.0" />
+        <!-- Ghostery End -->
 
         <TextView
             android:id="@+id/build_date"
