--- a/app/src/main/res/drawable/progress_gradient.xml
+++ b/app/src/main/res/drawable/progress_gradient.xml
@@ -17,11 +17,12 @@
                     android:bottomRightRadius="8dp"
                     android:topLeftRadius="0dp"
                     android:topRightRadius="8dp"/>
+                <!-- Ghostery Begin: changing the progress bar color -->
                 <gradient
                     android:angle="45"
-                    android:centerColor="#F10366"
-                    android:endColor="#FF9100"
-                    android:startColor="#6173FF" />
+                    android:endColor="#00AEF0"
+                    android:startColor="#920094" />
+                <!-- Ghostery End -->
             </shape>
         </scale>
     </item>
