--- a/app/src/main/res/layout/top_site_item.xml
+++ b/app/src/main/res/layout/top_site_item.xml
@@ -2,18 +2,20 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+<!-- Ghostery Begin: making the icons and text bigger -->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/top_site_item"
-    android:layout_width="64dp"
+    android:layout_width="84dp"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
     <FrameLayout
         android:id="@+id/favicon_wrapper"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:padding="4dp"
         android:background="@drawable/top_sites_background"
         app:layout_constraintBottom_toTopOf="@id/top_site_title"
@@ -23,12 +25,13 @@
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/favicon_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:importantForAccessibility="no"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            tools:src="@drawable/ic_folder_icon"/>
     </FrameLayout>
 
     <TextView
@@ -38,11 +41,13 @@
         android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/top_site_title_text"
-        android:textSize="10sp"
+        android:textSize="14sp"
         android:layout_marginTop="8dp"
+        tools:text="Ghostery"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/favicon_wrapper" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+<!-- Ghostery End -->
