--- a/app/src/main/res/layout/top_site_item.xml
+++ b/app/src/main/res/layout/top_site_item.xml
@@ -2,31 +2,34 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+<!-- Ghostery Begin: making the icons and text bigger -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/top_site_item"
-    android:layout_width="64dp"
+    android:layout_width="84dp"
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/favicon_wrapper"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:padding="4dp"
         android:background="@drawable/top_sites_background"
         android:layout_gravity="center"
        >
         <ImageView
             android:id="@+id/favicon_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:importantForAccessibility="no"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            tools:src="@drawable/ic_folder_icon"/>
     </FrameLayout>
 
     <TextView
@@ -36,7 +39,9 @@
         android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/top_site_title_text"
-        android:textSize="10sp"
-        android:layout_marginTop="8dp" />
+        android:textSize="14sp"
+        android:layout_marginTop="8dp"
+        tools:text="Ghostery" />
 
 </LinearLayout>
+<!-- Ghostery End -->
