--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,10 @@
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <item name="android:progressBarStyleHorizontal">@style/progressBarStyleHorizontal</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowBackground">@color/foundation_normal_theme</item>
+        <!-- Ghostery Begin: splash screen -->
+        <item name="android:statusBarColor">@color/foundation_normal_theme</item>
+        <item name="android:windowBackground">@drawable/splashscreen_window_background</item>
+        <!-- Ghostery End -->
         <item name="android:colorEdgeEffect">@color/accent_normal_theme</item>
         <item name="android:colorAccent">@color/primary_text_normal_theme</item>
         <item name="android:textColorPrimary">@color/state_list_text_color</item>
@@ -579,4 +581,5 @@
         <item name="elevation">90dp</item>
         <item name="android:stateListAnimator">@null</item>
     </style>
+
 </resources>
