Fixing background issues due to the splashscreen

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -29,6 +29,7 @@
 
     <!-- Misc -->
     <attr name="homeBackground" format="reference"/>
+    <attr name="libraryBackground" format="reference" />
     <attr name="bottomBarBackground" format="reference"/>
     <attr name="bottomBarBackgroundTop" format="reference"/>
     <attr name="privateBrowsingButtonBackground" format="reference" />
