--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <!-- Ghostery Begin: splash screen -->
         <item name="android:statusBarColor">@color/foundation_normal_theme</item>
         <item name="android:windowBackground">@drawable/splashscreen_window_background</item>
+        <item name="libraryBackground">@color/foundation_normal_theme</item>
         <!-- Ghostery End -->
         <item name="android:colorEdgeEffect">@color/accent_normal_theme</item>
         <item name="android:colorAccent">@color/primary_text_normal_theme</item>
@@ -570,4 +571,5 @@
         <item name="elevation">90dp</item>
         <item name="android:stateListAnimator">@null</item>
     </style>
+
 </resources>
