--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -9,4 +9,5 @@
     android:id="@+id/historyLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?libraryBackground"
     tools:context="org.mozilla.fenix.library.history.HistoryFragment" />
