--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,7 +48,9 @@
     <color name="top_site_background_light_theme">@android:color/white</color>
     <color name="top_site_border_light_theme">@color/light_grey_30</color>
     <color name="synced_tabs_separator_light_theme">@color/light_grey_30</color>
-    <color name="top_site_title_text_light_theme">@color/light_grey_80</color>
+    <!-- Ghostery Begin: home background -->
+    <color name="top_site_title_text_light_theme">@color/white_color</color>
+    <!-- Ghostrey End -->
     <color name="collection_icon_color_violet_light_theme">#7542E5</color>
     <color name="collection_icon_color_blue_light_theme">#0250BB</color>
     <color name="collection_icon_color_pink_light_theme">#E31587</color>
@@ -108,7 +110,9 @@
     <color name="top_site_background_dark_theme">@color/dark_grey_50</color>
     <color name="top_site_border_dark_theme">@color/dark_grey_10</color>
     <color name="synced_tabs_separator_dark_theme">@color/dark_grey_10</color>
-    <color name="top_site_title_text_dark_theme">@color/light_grey_90</color>
+    <!-- Ghostery Begin: home background -->
+    <color name="top_site_title_text_dark_theme">@color/light_grey_10</color>
+    <!-- Ghostery End -->
     <color name="collection_icon_color_violet_dark_theme">#AB71FF</color>
     <color name="collection_icon_color_blue_dark_theme">#00B3F4</color>
     <color name="collection_icon_color_pink_dark_theme">#FF6BBA</color>
