--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,8 @@
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <item name="android:progressBarStyleHorizontal">@style/progressBarStyleHorizontal</item>
-        <!-- Ghostery Begin: splash screen -->
-        <item name="android:statusBarColor">@color/foundation_normal_theme</item>
-        <item name="android:windowBackground">@drawable/splashscreen_window_background</item>
-        <!-- Ghostery End -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/foundation_normal_theme</item>
         <item name="android:colorEdgeEffect">@color/accent_normal_theme</item>
         <item name="android:colorAccent">@color/primary_text_normal_theme</item>
         <item name="android:textColorPrimary">@color/state_list_text_color</item>
@@ -97,6 +95,13 @@
         <item name="privateBrowsingButtonAccent">@color/primary_text_normal_theme</item>
         <item name="shieldLottieFile">@raw/shield_json</item>
     </style>
+
+    <!-- Ghostery Begin: splash screen -->
+    <style name="LaunchTheme" parent="NormalThemeBase">
+        <item name="android:statusBarColor">@color/foundation_normal_theme</item>
+        <item name="android:windowBackground">@drawable/splashscreen_window_background</item>
+    </style>
+    <!-- Ghostery End -->
 
     <style name="NormalTheme" parent="NormalThemeBase" />
 
