--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -33,6 +33,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.75" />
 
+        <!-- Ghostery Begin: Ghostery is produced by Ghostery -+>
         <TextView
             android:id="@+id/about_content"
             style="@style/Header16TextStyle"
@@ -47,6 +48,7 @@
             app:layout_constraintTop_toBottomOf="@id/wordmark"
             app:layout_constraintWidth_percent="0.8"
             tools:text="@string/about_content" />
+        -->
 
         <TextView
             android:id="@+id/about_text"
@@ -58,9 +60,10 @@
             android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/about_content"
+            app:layout_constraintTop_toBottomOf="@id/wordmark"
             app:layout_constraintWidth_percent="0.8"
             tools:text="1.0.x (Build #x)\nAC: 1.0.0\nGV: 69.x-x\nAS: 1.0.0" />
+        <!-- Ghostery End -->
 
         <TextView
             android:id="@+id/build_date"
