--- a/assets/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/assets/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,30 +1,42 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="100"
-    android:viewportHeight="100"
-    android:width="100dp"
-    android:height="100dp">
-    <group>
-        <clip-path
-            android:pathData="M0 0H100V100H0V0Z" />
-        <path
-            android:pathData="M0 0H100V100H0V0Z">
-            <aapt:attr
-                name="android:fillColor">
-                <gradient
-                    android:endX="100"
-                    android:endY="100"
-                    android:tileMode="clamp">
-                    <item
-                        android:color="#7D3E4D"
-                        android:offset="0" />
-                    <item
-                        android:color="#7C3E4E"
-                        android:offset="0.22" />
-                    <item
-                        android:color="#00568A"
-                        android:offset="1" />
-                </gradient>
-            </aapt:attr>
-        </path>
-    </group>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group>
+    <clip-path
+        android:pathData="M0,0h108v108h-108z"/>
+    <path
+        android:pathData="M0,0h108v108h-108z"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M0,0h108v108h-108z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="0"
+            android:startX="54"
+            android:endY="108"
+            android:endX="54"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF57B8EA"/>
+          <item android:offset="1" android:color="#FF2765D9"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M0,0h108v108h-108z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="0"
+            android:startX="0"
+            android:endY="99.598"
+            android:endX="115.26"
+            android:type="linear">
+          <item android:offset="0.1875" android:color="#FF7D3E4D"/>
+          <item android:offset="0.817708" android:color="#FF065587"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
